app structure commit 2

--- a/app/views/home.handlebars
+++ b/app/views/home.handlebars
@@ -1,8 +1,39 @@
 
-  <div class="row">
-    <div class="col-md-12" >
-      <h1>Home</h>
-        
-    </div>
-  </div>
+<div id="nav" class="nav">
+	<div class="navLinks">
+		<a href='/home'>
+			<img class="navIcon" src="homeIcon.png">
+		</a>
+		<a href='/notifications'>
+			<img class="navIcon" src="notificationIcon.png">
+		</a>
+		<a href='/records'>
+			<img class="navIcon" src="recordsIcon.png">
+		</a>
+		<a href='/calendar'>
+			<img class="navIcon" src="calendarIcon.png">
+		</a>
+		<a href='/settings'>
+			<img class="navIcon" src="settingsIcon.png">
+		</a>
+	</div>
+</div>
+<div id="content" class="content">
+	<h2>Welcome to Pill Buddy, [[USERNAME]]!</h2>
+	<div>
+		<img class="pillFriend" src="3-pill-capsule-char.png">
+	</div>
+	<div>
+		<h3>Medication consistency is integral in ensuring long-term treatment success. Pill Buddy is here to help patients & caretakers succeed in developing & maintaining consistent care.</h3>
+	</div>
+	<div>
+		<p>All caretakers & patients will have access to the notifications, patients, calendar, & settings tabs. Different functionality will be turned on & off depending on your subscription.</p>
+		<p>Notifications will give you live updates on missing data from patient profiles & will also sync with the calendar to provide real-time notifications to take medication. The patient tab allows you to view & edit all patient information around medication & scheduling whereas the settings tab is designed for you to update your account information.</p>
+	</div>
+</div>
+<div id="footer" class="footer">
+	<p>Produced & Maintained by Group 11</p>
+</div>
+<div id="logo" class="logo">
+	<img class="pillFriend" src="8-pill-capsule-char.png">
 </div>
