wiring up node app

--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -2,20 +2,45 @@
 <html>
 
 <head>
-  <title>Pill Reminder</title>
+  <title>Pill Buddy</title>
   <meta name="author" content="Group 11" charset="utf-8">
   <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body id="body">
 
 
-
+<div id="nav" class="nav">
+	<div class="navLinks">
+		<a href='home.html'>
+			<img class="navIcon" src="homeIcon.png">
+		</a>
+		<a href='notifications.html'>
+			<img class="navIcon" src="notificationIcon.png">
+		</a>
+		<a href='records.html'>
+			<img class="navIcon" src="recordsIcon.png">
+		</a>
+		<a href='calendar.html'>
+			<img class="navIcon" src="calendarIcon.png">
+		</a>
+		<a href='settings.html'>
+			<img class="navIcon" src="settingsIcon.png">
+		</a>
+	</div>
+</div>
 
 
 
   {{{body}}}
  
+ <div id="footer" class="footer">
+	<p>Produced & Maintained by Group 11</p>
+</div>
+<div id="logo" class="logo">
+	<img class="pillFriend" src="8-pill-capsule-char.png">
+</div>
 
 
   <script src ="script/bootstrap.js"></script>
