--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -10,39 +10,43 @@
 
 <body id="body">
 
+<div class="container">
+  <div class = "col-12">
+    <div id="nav" class="nav">
+    	<div class="navLinks">
+    		<a href='home.html'>
+    			<img class="navIcon" src="homeIcon.png">
+    		</a>
+    		<a href='notifications.html'>
+    			<img class="navIcon" src="notificationIcon.png">
+    		</a>
+    		<a href='records.html'>
+    			<img class="navIcon" src="recordsIcon.png">
+    		</a>
+    		<a href='calendar.html'>
+    			<img class="navIcon" src="calendarIcon.png">
+    		</a>
+    		<a href='settings.html'>
+    			<img class="navIcon" src="settingsIcon.png">
+    		</a>
+    	</div>
+    </div>
 
-<div id="nav" class="nav">
-	<div class="navLinks">
-		<a href='home.html'>
-			<img class="navIcon" src="homeIcon.png">
-		</a>
-		<a href='notifications.html'>
-			<img class="navIcon" src="notificationIcon.png">
-		</a>
-		<a href='records.html'>
-			<img class="navIcon" src="recordsIcon.png">
-		</a>
-		<a href='calendar.html'>
-			<img class="navIcon" src="calendarIcon.png">
-		</a>
-		<a href='settings.html'>
-			<img class="navIcon" src="settingsIcon.png">
-		</a>
-	</div>
-</div>
 
 
+      {{{body}}}
+  
 
-  {{{body}}}
  
- <div id="footer" class="footer">
-	<p>Produced & Maintained by Group 11</p>
-</div>
-<div id="logo" class="logo">
-	<img class="pillFriend" src="8-pill-capsule-char.png">
-</div>
+     <div id="footer" class="footer">
+    	<p>Produced & Maintained by Group 11</p>
+    </div>
+    <div id="logo" class="logo">
+    	<img class="pillFriend" src="8-pill-capsule-char.png">
+    </div>
 
-
+</div>
+</div>
   <script src ="script/bootstrap.js"></script>
   <!-- below is jquery for fancy bootstrap stuff -->
 
