--- a/app/views/records.handlebars
+++ b/app/views/records.handlebars
@@ -1,4 +1,4 @@
-id="content" class="content">
+<div id="content" class="content">
 	<h2>Patient Records</h2>
 	<h3>Click the arrow next to any patient to view full patient record</h3>
 	<div>
@@ -9,6 +9,18 @@ id="content" class="content">
 				<th>First Name</th>
 				<th> </th>
 			</tr>
+			<tbody>
+				{{#if results}}
+                {{#each results}}
+                  <tr id="patient">
+                    <td>{{this.id}}</td>
+                    <td>{{this.fname}}</td>
+                    <td>{{this.lname}}</td>
+					<td><img class="tblIcons" src="fwdIcon.png" href="patient/{{this.id}}"></td>
+                  </tr>
+                {{/each}}
+              {{/if}}
+			</tbody>
 		</table>
 	</div>
 </div>
