--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -4,8 +4,9 @@
 <head>
   <title>Pill Buddy</title>
   <meta name="author" content="Group 11" charset="utf-8">
+  <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" >
   <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" type="text/css" href="style.css">
+  
 </head>
 
 <body id="body">
@@ -47,12 +48,14 @@
 
 </div>
 </div>
+  
+  <!-- all the below script is probably unnecessary -->
   <script src ="script/bootstrap.js"></script>
   <!-- below is jquery for fancy bootstrap stuff -->
-
+  
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
   <!-- end jquery -->
 
