bug squash 2: images, links

--- a/app/views/home.handlebars
+++ b/app/views/home.handlebars
@@ -1,7 +1,7 @@
 <div id="content" class="content">
 	<h2>Welcome to Pill Buddy, [[USERNAME]]!</h2>
 	<div>
-		<img class="pillFriend" src="3-pill-capsule-char.png">
+		<img class="pillFriend" src="/images/3-pill-capsule-char.png">
 	</div>
 	<div>
 		<h3>Medication consistency is integral in ensuring long-term treatment success. Pill Buddy is here to help patients & caretakers succeed in developing & maintaining consistent care.</h3>
