--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -31,7 +31,7 @@
 <div>
 	<h3>
 		<a href="records.html">
-			<img class="tblIcons" src="bkwdIcon.png">
+			<img class="tblIcons" src="/images/bkwdIcon.png">
 		</a>
 		Back to full patient records
 	</h3>
