--- a/app/views/records.handlebars
+++ b/app/views/records.handlebars
@@ -16,7 +16,7 @@
                     <td>{{this.id}}</td>
                     <td>{{this.fname}}</td>
                     <td>{{this.lname}}</td>
-					<td><img class="tblIcons" src="fwdIcon.png" href="patient/{{this.id}}"></td>
+					<td><img class="tblIcons" src="/images/fwdIcon.png" href="/patient/{{this.id}}"></td>
                   </tr>
                 {{/each}}
               {{/if}}
