--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -15,20 +15,20 @@
   <div class = "col-12">
     <div id="nav" class="nav">
     	<div class="navLinks">
-    		<a href='home.html'>
-    			<img class="navIcon" src="homeIcon.png">
+    		<a href='/home'>
+    			<img class="navIcon" src="/images/homeIcon.png">
     		</a>
-    		<a href='notifications.html'>
-    			<img class="navIcon" src="notificationIcon.png">
+    		<a href='/notifications'>
+    			<img class="navIcon" src="/images/notificationIcon.png">
     		</a>
-    		<a href='records.html'>
-    			<img class="navIcon" src="recordsIcon.png">
+    		<a href='/records'>
+    			<img class="navIcon" src="/images/recordsIcon.png">
     		</a>
-    		<a href='calendar.html'>
-    			<img class="navIcon" src="calendarIcon.png">
+    		<a href='/calendar'>
+    			<img class="navIcon" src="/images/calendarIcon.png">
     		</a>
-    		<a href='settings.html'>
-    			<img class="navIcon" src="settingsIcon.png">
+    		<a href='/settings'>
+    			<img class="navIcon" src="/images/settingsIcon.png">
     		</a>
     	</div>
     </div>
@@ -43,7 +43,7 @@
     	<p>Produced & Maintained by Group 11</p>
     </div>
     <div id="logo" class="logo">
-    	<img class="pillFriend" src="8-pill-capsule-char.png">
+    	<img class="pillFriend" src="/images/8-pill-capsule-char.png">
     </div>
 
 </div>
