--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -4,7 +4,7 @@
 	<div>
 		<table id="medList">
 			<tr>
-				<th>Patient ID</th>
+				<!-- <th>Patient ID</th> -->
 				<th>Medication</th>
 				<th>Dosage</th>
 				<th>Delivery</th>
@@ -15,11 +15,11 @@
 				{{#if results}}
                   {{#each results}}
 					<tr id="patient">
-                	    <td>{{this.id}}</td>
+                	    <!-- <td>{{this.patID}}</td> -->
                 	    <td>{{this.dose}}</td>
                 	    <td>{{this.medication}}</td>
 						<td>{{this.time}}</td>
-						<td>{{this.fill}}"></td>
+						<td>{{this.fill}}</td>
                 	    <td>{{this.date}}</td>
 					</tr>
 					{{/each}}
