new patient back link, more bug fixes

--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -30,7 +30,7 @@
 </div>
 <div>
 	<h3>
-		<a href="/records.html">
+		<a href="/records">
 			<img class="tblIcons" src="/images/bkwdIcon.png">
 		</a>
 		Back to full patient records
