updating patient images url

--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -21,7 +21,7 @@
 						<td>{{this.time}}</td>
 						<td>
 							{{#if this.fill}}
-								<img class="tblIcons" src="chkIcon.png">
+								<img class="tblIcons" src="/images/chkIcon.png">
 							{{/if}}
 						</td>
                 	    <td>{{this.date}}</td>
