changes for API compatibility

--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -36,7 +36,7 @@
 
 <div>
 	<h3>Add Medication Alert</h3>
-        <form id="form1" action="/patients/{{this.patID}}/add" method="post">
+        <form id="addMed" action="/patients/{{this.patID}}/add" method="POST">
           <div>
             <label for="medication">Medication Name</label>
             <input id="medication" name="medication" type="text">
