--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -9,7 +9,6 @@
 				<th>Dosage</th>
 				<th>Delivery</th>
 				<th>Filled?</th>
-				<th>Expiration</th>
 			</tr>
 			<tbody>
 				{{#if results}}
@@ -17,14 +16,12 @@
 					<tr id="patient">
                 	    <!-- <td>{{this.patient_id}}</td> -->
                 	    <td>{{this.name}}</td>
-                	    <td>{{this.dose}}</td>
 						<td>{{this.dose_date}}</td>
 						<td>
 							{{#if this.fill}}
 								<img class="tblIcons" src="/images/chkIcon.png">
 							{{/if}}
 						</td>
-                	    <td>{{this.dose_date}}</td>
 						<td><input type="button" name= "delete" value="delete" onclick="location.href='patient/{{this.patient_id}}<!--/delete/{{this.id}}-->'" /></td>
 					</tr>
 					{{/each}}
@@ -36,19 +33,13 @@
 
 <div>
 	<h3>Add Medication Alert</h3>
-        <form id="addMed" action="/patients/{{this.patID}}/add" method="POST">
+        <form id="addMed" action="/patients/{{this.patient_id}}/add" method="POST">
           <div>
             <label for="medication">Medication Name</label>
-            <input id="medication" name="medication" type="text">
-            <label for="dose">Dosage (mg)</label>
-            <input id="dose" name="dose" type="text">
+            <input id="name" name="name" type="text">
             <label for="time">Delivery Time</label>
-            <input id="time" name="time" type="text">
-			<label for="interval">Minutes between Doses</label>
-            <input id="interval" name="interval" type="text">
-            <label for="expiration">Expiration</label>
-            <input id="expiration" name="expiration" type="text">
-            <td><input type="submit" formmethod="post" value="medsubmit" /></td>
+            <input id="doseDate" name="doseDate" type="text">
+            <td><input type="submit" formmethod="post" value="Add Med!" /></td>
           </div>
 
         </form>
