changing the names of js variables 1/? also added back the med list push

--- a/app/views/patient.handlebars
+++ b/app/views/patient.handlebars
@@ -33,7 +33,7 @@
 
 <div>
 	<h3>Add Medication Alert</h3>
-        <form id="addMed" action="/patients/{{this.patient_id}}/add" method="POST">
+        <form id="addMed" action="/patients/{{patient_id}}/add" method="POST">
           <div>
             <label for="medication">Medication Name</label>
             <input id="name" name="name" type="text">
