--- a/app/views/records.handlebars
+++ b/app/views/records.handlebars
@@ -16,12 +16,17 @@
                     <td>{{this.id}}</td>
                     <td>{{this.lastName}}</td>
                     <td>{{this.firstName}}</td>
-					<td><a href="/patient/{{this.id}}"><img class="tblIcons" src="/images/fwdIcon.png" ></td></a></td>
+					<td><a href="/patient/1"><img class="tblIcons" src="/images/fwdIcon.png" ></td></a></td>
                   </tr>
                 {{/each}}
               {{/if}}
 			</tbody>
 		</table>
+		<div>
+			<p>
+				Future iterations will include medication profile links for all patients, but this was not part of our scope for these 2 weeks. Please see Kelly Bland for the mock-up medication implementation. Currently, all patient links will re-direct to Kelly Bland's medication profile for demonstration purposes.
+			</p>
+		</div>
 	</div>
 </div>
 <div>
